# hadoken

./: .clang-format  .gitreview  .travis.yml  CMakeLists.txt  LICENSE  README  README.md
CMake/config/: CompilerFlagsHelpers.cmake  DetectCXX11Support.cmake  ReleaseDebugAutoFlags.cmake  __cpp11_test_prog1.testsrc
CMake/helpers/: PkgConfigGenHelper.cmake
include/hadoken/config/: platform_config.hpp
include/hadoken/containers/: concurrent_queue.hpp  ptr_iterator.hpp  small_vector.hpp
include/hadoken/containers/bits/: concurrent_queue_bits.hpp  small_vector_bits.hpp
include/hadoken/crypto/: crypto.hpp
include/hadoken/crypto/base/: base64.hpp
include/hadoken/crypto/sha/: sha1.hpp
include/hadoken/executor/: multiplexer_executor.hpp  simple_thread_executor.hpp  system_executor.hpp  thread_pool_executor.hpp
include/hadoken/format/: datetime.hpp  format.hpp  format_template.hpp
include/hadoken/fsm/: fsm.hpp
include/hadoken/fsm/impl/: fsm_impl.hpp
include/hadoken/geometry/: geometry.hpp  geometry_legacy.hpp  register_std_array.hpp
include/hadoken/geometry/algorithms/: algorithms.hpp
include/hadoken/geometry/objects/: cone.hpp  objects.hpp  point_base.hpp  sphere.hpp
include/hadoken/getopts/: getopts.hpp
include/hadoken/getopts/impl/: getopts_impl.hpp
include/hadoken/gpu/: algorithm.hpp  array.hpp
include/hadoken/math/: math_floating_point.hpp
include/hadoken/network/: socket.hpp  uri.hpp
include/hadoken/network/impl/: socket_impl.hpp  uri_impl.hpp
include/hadoken/numeric/: convert.hpp  float.hpp  histogram.hpp
include/hadoken/os/: env.hpp  hostname.hpp
include/hadoken/os/impl/: env_impl.hpp  hostname_impl.hpp
include/hadoken/parallel/: algorithm.hpp
include/hadoken/parallel/bits/: algorithm.hpp  c11_thread_algorithm_impl.hpp  cxx11_thread_algorithm_impl.hpp  gnu_pstl_algorithm_impl.hpp  omp_algorithm_impl.hpp  parallel_algorithm_generics.hpp  parallel_count_generics.hpp  parallel_generic_utils.hpp  parallel_none_any_all_generic.hpp  parallel_numeric_generic.hpp  parallel_sort_generic.hpp  parallel_transform_generic.hpp  tbb_algorithm_impl.hpp
include/hadoken/random/: counter_engine.hpp  random.hpp  random_derivate.hpp  random_engine_mapper.hpp  threefry.hpp
include/hadoken/random/impl/: random_derivate_impl.hpp  random_engine_mapper_misc.hpp
include/hadoken/spmd/: spmd_array.hpp  spmd_ops.hpp
include/hadoken/state_machine/: state_machine.hpp
include/hadoken/state_machine/impl/: state_machine_impl.hpp  state_machine_transition_impl.hpp
include/hadoken/string/: algorithm.hpp  string_view.hpp  wildcard.hpp
include/hadoken/string/bits/: string_view_impl.hpp
include/hadoken/thread/: future_helpers.hpp  latch.hpp  spinlock.hpp
include/hadoken/threading/: std_thread_model.hpp
include/hadoken/ublas/: ublas.hpp
include/hadoken/utility/: endian.hpp  enum.hpp  optional.hpp  range.hpp  singleton.hpp  variant.hpp
misc/pkgconfig/: hadoken.pc
src/: hadoken_version.cpp
tests/cuda/: a.out  log  random_perf.cu  test
tests/perf/: CMakeLists.txt  executor_perf.cpp  lock_perf.cpp  parallel_perf.cpp  random_perf.cpp  random_perf_derivate.cpp  small_vector_perf.cpp
tests/unit/: CMakeLists.txt  MpiRuntime.cpp  test_container.cpp  test_crypto.cpp  test_format.cpp  test_fsm.cpp  test_generic.cpp  test_geometry.cpp  test_helpers.hpp  test_network.cpp  test_opts_parser.cpp  test_os.cpp  test_parallel.cpp  test_random.cpp  test_spmd.cpp  test_string.cpp  test_thread.cpp
